[gd_scene load_steps=20 format=3 uid="uid://ctvntps3t1rwp"]

[ext_resource type="Script" uid="uid://0j13f6odmknw" path="res://scripts/tv.gd" id="1_ovwuf"]
[ext_resource type="Texture2D" uid="uid://be7huobu125e6" path="res://assets/furniture/TV_OUTLINE_New.png" id="2_ie1qu"]
[ext_resource type="Texture2D" uid="uid://bg8as8nbdyxmt" path="res://assets/furniture/TV_OFF_New.PNG" id="3_co5w5"]
[ext_resource type="Texture2D" uid="uid://lmnp5vhloni8" path="res://assets/furniture/TV_ON_NEW.png" id="4_46idq"]
[ext_resource type="PackedScene" uid="uid://dyics0kkgnyn2" path="res://helpers/actionable.tscn" id="6_46idq"]
[ext_resource type="Resource" uid="uid://da7o6yuv151bt" path="res://dialogue/tv.dialogue" id="7_pbv82"]
[ext_resource type="Texture2D" uid="uid://ct43ersj77rov" path="res://assets/textLabels/Televisión.png" id="8_6m8rr"]
[ext_resource type="AudioStream" uid="uid://cusu8si372aam" path="res://audio/vocabAudio/tv.mp3" id="8_pbv82"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pbv82"]
atlas = ExtResource("3_co5w5")
region = Rect2(0, 0, 2048, 1536)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m8rr"]
atlas = ExtResource("4_46idq")
region = Rect2(0, 0, 2048, 1536)

[sub_resource type="AtlasTexture" id="AtlasTexture_4knv4"]
atlas = ExtResource("4_46idq")
region = Rect2(2048, 0, 2048, 1536)

[sub_resource type="AtlasTexture" id="AtlasTexture_daor5"]
atlas = ExtResource("4_46idq")
region = Rect2(4096, 0, 2048, 1536)

[sub_resource type="SpriteFrames" id="SpriteFrames_iqsce"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbv82")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m8rr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4knv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_daor5")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_egngg"]
size = Vector2(905, 781)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_46idq"]
size = Vector2(912, 783)

[sub_resource type="Animation" id="Animation_4knv4"]
resource_name = "tvShow"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Televisión:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-18, -14), Vector2(29, -585)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Televisión:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(0.461722, 0.461722)]
}

[sub_resource type="Animation" id="Animation_daor5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Televisión:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-18, -14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Televisión:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.461722, 0.461722)]
}

[sub_resource type="Animation" id="Animation_pbv82"]
resource_name = "tvHide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Televisión:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(29, -585), Vector2(-18, -14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Televisión:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.461722, 0.461722), Vector2(0.1, 0.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iqsce"]
_data = {
&"RESET": SubResource("Animation_daor5"),
&"tvHide": SubResource("Animation_pbv82"),
&"tvShow": SubResource("Animation_4knv4")
}

[node name="TV" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ovwuf")

[node name="outline" type="Sprite2D" parent="."]
texture = ExtResource("2_ie1qu")

[node name="tvAnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_iqsce")
animation = &"on"
autoplay = "off"

[node name="tv_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tv_area"]
position = Vector2(-4.5, -48.5)
shape = SubResource("RectangleShape2D_egngg")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-328, -73, -408, 37, 441, 28, 384, -81)

[node name="Actionable" parent="." instance=ExtResource("6_46idq")]
dialogue_resource = ExtResource("7_pbv82")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actionable"]
position = Vector2(-5, -46.5)
shape = SubResource("RectangleShape2D_46idq")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_pbv82")
volume_db = 10.0

[node name="Televisión" type="Sprite2D" parent="."]
modulate = Color(0.843184, 0.843184, 0.843184, 1)
position = Vector2(-18, -14)
scale = Vector2(0.461722, 0.461722)
texture = ExtResource("8_6m8rr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iqsce")
}

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="area_entered" from="tv_area" to="." method="_on_tv_area_area_entered"]
[connection signal="area_exited" from="tv_area" to="." method="_on_tv_area_area_exited"]
